--- a/javascript/dom/dom-elements.html
+++ b/javascript/dom/dom-elements.html
@@ -41,6 +41,8 @@
     // console.log(el.getAttribute('id'))
     //--------------------------------------
 
+    console.log(el.children[4])
+
   </script>
 </body>
 
